[gd_scene load_steps=9 format=3 uid="uid://b7di8plutlm5b"]

[ext_resource type="Script" uid="uid://cc3gl238dnxsa" path="res://scenes/game/card_popout.gd" id="1_nkmer"]
[ext_resource type="PackedScene" uid="uid://blev8t8g4iq0m" path="res://scenes/misc/icon_button.tscn" id="2_38lt7"]
[ext_resource type="PackedScene" uid="uid://c86ockf3l38eh" path="res://scenes/game/multichoicebutton.tscn" id="2_a2hxt"]
[ext_resource type="Texture2D" uid="uid://ohmonvyuqeuf" path="res://assets/icons/minus.png" id="3_mqvsl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7jww"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkair"]
bg_color = Color(0.6, 0.6, 0.6, 0.686275)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0823529, 0.0823529, 0.0823529, 0.686275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3c3kd"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pe41s"]

[node name="CardPopout" type="CenterContainer"]
z_index = 10
custom_minimum_size = Vector2(1280, 720)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_nkmer")

[node name="FullScreenButtonPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_f7jww")

[node name="ClickOutsideButton" type="TextureButton" parent="FullScreenButtonPanel"]
layout_mode = 2
ignore_texture_size = true
stretch_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pkair")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleBar" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3c3kd")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/TitleBar"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer"]
layout_mode = 2

[node name="InstructionsLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
bbcode_enabled = true
text = "[b]Test[/b] with instructions this is a really long instruction
Do the thing"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MinimizeButton" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer" instance=ExtResource("2_38lt7")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("3_mqvsl")

[node name="CheckboxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer"]
layout_mode = 2

[node name="ShowAllCardsToggleButton" type="CheckButton" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/CheckboxContainer"]
layout_mode = 2
text = "Include unchooseable cards"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ActionButton2" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer2" instance=ExtResource("2_a2hxt")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 5

[node name="ActionButton1" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer2" instance=ExtResource("2_a2hxt")]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="CardPanel" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer/CardPanel"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_pe41s")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/CardPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/margin_right = 5

[node name="CardGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/CardPanel/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 10

[connection signal="pressed" from="FullScreenButtonPanel/ClickOutsideButton" to="." method="_on_click_outside_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/HBoxContainer/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/TitleBar/VBoxContainer/CheckboxContainer/ShowAllCardsToggleButton" to="." method="_on_show_all_cards_toggle_button_toggled"]
